@@ -11,6 +11,7 @@ v 7.3.0
   - Store session Redis keys in 'session:gitlab:' namespace
   - Deprecate LDAP account takeover based on partial LDAP email / GitLab username match
   - Keyboard shortcuts for productivity (Robert Schilling)
+  - API: filter issues by state (Julien Bianchi)
 
 v 7.2.0
   - Explore page
